--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
     <groupId>com.napier.sem</groupId>
     <artifactId>seMethods</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1.0.2</version> <!-- Updated version for release -->
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -41,6 +41,7 @@
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
+                    <finalName>seMethods-0.1.0.2-alpha-2</finalName> <!-- New JAR name -->
                 </configuration>
                 <executions>
                     <execution>
